--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+!**/target/
+!**/.idea/
 
 ### Eclipse ###
 .apt_generated
@@ -28,3 +30,4 @@ bin/
 ### Mac OS ###
 .DS_Store
 /target/
+/.idea/
