--- a/pom.xml
+++ b/pom.xml
@@ -20,9 +20,11 @@
             <artifactId>json</artifactId>
             <version>20230227</version>
         </dependency>
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>jakarta.mail</artifactId>
+                <version>2.0.1</version>
+            </dependency>
     </dependencies>
 
-
-
-    
 </project>
