--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ out/
 !**/src/test/**/out/
 !**/target/
 !**/.idea/
+/target/
+/.idea/
 
 ### Eclipse ###
 .apt_generated
@@ -31,13 +33,3 @@ bin/
 .DS_Store
 /target/
 /.idea/
-.idea/workspace.xml
-data/drugs/errors.txt
-manageRx.iml
-target/classes/META-INF/maven/FiNAL/manageRx/pom.properties
-data/drugs/errors.txt
-.idea/workspace.xml
-.idea/workspace.xml
-data/drugs/errors.txt
-target/classes/META-INF/maven/FiNAL/manageRx/pom.properties
-pom.xml
